layout/generic/ScrollAnchorContainer.cpp
@@ -320,13 +320,15 @@ void ScrollAnchorContainer::Destroy() {
 void ScrollAnchorContainer::ApplyAdjustments() {
   if (!mAnchorNode || mAnchorNodeIsDirty ||
       mScrollFrame->HasPendingScrollRestoration() ||
+      mScrollFrame->IsProcessingScrollEvent() ||
       mScrollFrame->IsProcessingAsyncScroll()) {
     mSuppressAnchorAdjustment = false;
     ANCHOR_LOG(
         "Ignoring post-reflow (anchor=%p, dirty=%d, pendingRestoration=%d, "
-        "asyncScroll=%d container=%p).\n",
+        "scrollevent=%d asyncScroll=%d container=%p).\n",
         mAnchorNode, mAnchorNodeIsDirty,
         mScrollFrame->HasPendingScrollRestoration(),
+        mScrollFrame->IsProcessingScrollEvent(),
         mScrollFrame->IsProcessingAsyncScroll(), this);
     return;
   }
